# stressable

./: Dockerfile  README.md  pyproject.toml
stressable/: main.py  utils.py
tests/: test_main.py  test_utils.py
