[tool.poetry]
name = "stressable"
version = "0.1.0"
description = ""
authors = ["oskarissimus <oskar.korczak@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.9"
mypy = "^0.991"
isort = "^5.11.4"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
