[tool.poetry]
name = "stressable"
version = "0.1.0"
description = ""
authors = ["oskarissimus <oskar.korczak@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["testclient"], version = "^0.95.1"}
uvicorn = {extras = ["standard"], version = "^0.20.0"}
pytest = "^7.3.1"
httpx = "^0.24.0"
pytest-asyncio = "^0.21.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.9"
mypy = "^0.991"
isort = "^5.11.4"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
